hphp/test/slow/eval_order/1517.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: v' in %s/eval_order/1517.php:6
Stack trace:
%A
